# robotic_needle_insertion

./: .gitignore  CMakeLists.txt  ReadMe.md
BestPathVisualization/: BestPathVisualization.py  CMakeLists.txt
BestPathVisualization/BestPathVisualizationLib/: __init__.py  la_utils.py  logic.py  overlay.py  slicer_convenience_lib.py
BestPathVisualization/Testing/: SlicerGUIClick.py
BestPathVisualization/Testing/Match_CT_Scans/: matchXYZ.m  moveCT_Bauch.m  moveCT_Ruecken.m  nrrdread.m
